fixed some reponsive looks, made the p 14px on smaller screens and removed the padding I added for desktop on mobile.

--- a/static/src/sass/marketing/pages/marketing-record-breaker.scss
+++ b/static/src/sass/marketing/pages/marketing-record-breaker.scss
@@ -1,6 +1,7 @@
 .record-breaker{
   p{
     font-size: 16px;
+    @media screen and (max-width: 800px) {font-size: 14px;}
   }
   h2,h3{
     padding: 0;
@@ -137,6 +138,7 @@
       .grid-col-3{padding-top: 50px;}
       @media screen and (max-width: 1000px) {
         padding: 0 20px 0;
+        .grid-col-3{padding-top: 0;}
       }
       @media screen and (max-width: 800px) {
         &.grid{
